force-app/main/default/objects/BoardEx__Exception_Log__c/BoardEx__Exception_Log__c.object-meta.xml
<CustomObject>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>