force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Caused_By__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Caused_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caused By</label>
    <referenceTo>BoardEx__Exception_Log__c</referenceTo>
    <relationshipLabel>Caused Exceptions</relationshipLabel>
    <relationshipName>Caused_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>