force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__External_ID__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>