force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>