force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Message__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>