force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Number_of_Failed_Rows__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Number_of_Failed_Rows__c</fullName>
    <label>Number of Failed Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>