force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Related_To_ID__c</fullName>
    <externalId>true</externalId>
    <label>Related To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>