force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>