force-app/main/default/objects/BoardEx__Exception_Log__c/fields/BoardEx__Type__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>